# ipc_dev

./: .gitignore  .gitmodules  Cargo.toml  README.md  data.json  package.json
.cargo/: config.toml
config/: default.json
examples/: list-ports.ts  monitor-flowmeters.ts  test-connection.ts
src/: lib.rs  main.rs  modbus.ts
src/cli/: commands.rs
src/config/: config_commands.rs  dynamic_manager.rs  mod.rs  mqtt_handler.rs  settings.rs
src/devices/: flowmeter.rs  mod.rs  registry.rs  traits.rs
src/devices/gps/: gps_data.rs  gps_reader.rs  gps_service.rs  mod.rs
src/modbus/: client.rs  crc.rs  mod.rs  protocol.rs
src/output/: formatters.rs  mod.rs  raw_sender.rs  senders.rs
src/services/: api_service.rs  data_service.rs  database_service.rs  mod.rs  socket_server.rs
src/storage/: migrations.rs  mod.rs  models.rs  sqlite_manager.rs
src/utils/: error.rs
