[package]
name = "ipc_dev_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serialport = { path = "./serialport-rs" }
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
async-trait = "0.1.88"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
actix-web = "4.4"